--- a/app/views/entities/_left_menu.html.erb
+++ b/app/views/entities/_left_menu.html.erb
@@ -1,5 +1,5 @@
 <ul class="manage-left-menu" id="manage-left-menu" type="group">
-     <li>Department</li>
+     <li><%= t 'manage.department.desc.dep' %></li>
      <li id="manage-menu-add" style="background-color:rgba(0,0,0,0)"></li>
 
      <%@entities.each do |entity|%>
