--- a/app/views/kpi_entries/_entry.html.erb
+++ b/app/views/kpi_entries/_entry.html.erb
@@ -30,12 +30,12 @@
          </tr>
          <tr>
            <td><%= kpi.description%></td>
-           <td>Category</td>
-           <td>Trend</td>
-           <td>Target_Max</td>
-           <td>Target_Min</td>
-           <td>Actual</td>
-           <td>Recent</td>
+           <td><%= t 'entry.desc.category'%></td>
+           <td><%= t 'entry.desc.trend'%></td>
+           <td><%= t 'manage.kpi.target'%></td>
+           <td><%= t 'manage.kpi.target_min'%></td>
+           <td><%= t 'entry.desc.actual'%></td>
+           <td><%= t 'entry.desc.recent'%></td>
          </tr>
        </table>
      </li>
