--- a/app/views/entities/index.html.erb
+++ b/app/views/entities/index.html.erb
@@ -2,13 +2,13 @@
   <div class="content-left-main" id="content-left-main">
     <div style="width:auto;height:71px;"></div>
     <div class="left-content-title" id="left-content-title">
-      <p class="current-group-item">管理部门</p>
+      <p class="current-group-item"><%= t 'manage.department.desc.manage'%></p>
     </div>
 
     <div class="manage-left-content" id="dashboard-content" name="department">
       <div class="right-list-top-control" id="right-list-top-control" name="department">
         <input type="checkbox" id="manage-total-check"/>
-        <a class="btn" id="manage-item-remove">Delete</a>
+        <a class="btn" id="manage-item-remove"><%= t 'manage.base.delete_btn'%></a>
       </div>
       <ul id="manage-sort-list" class="manage-sort-list" name="department">
         <%@entities.each do |entity|%>
@@ -20,7 +20,7 @@
                   <td class="user-manage-name"><%= entity.name %></td>
                 </tr>
                 <tr>
-                  <td>部门名称</td>
+                  <td><%= t 'manage.department.desc.name'%></td>
                 </tr>
               </table>
             </li>
@@ -42,20 +42,18 @@
   <aside class="content-right-nav" name='department' id="content-right-nav">
     <div style="width:auto;height:71px;"></div>
     <section class="solid" style="position:relative">
-      <h3>创建部门</h3>
-      <p>Department is the place to put your staff and the view is
-        made up of departments</p>
+      <h3><%= t 'manage.department.desc.create'%></h3>
+      <p><%= t 'manage.department.desc.create_desc'%></p>
       <a class="btn btn-primary" id="add-department">Create Now</a>
       <div class="content-right-nav-add-block" id="content-right-nav-add-block" name="department">
-        <p>give it a name</p>
+        <p><%= t 'manage.department.desc.give_name'%></p>
         <input type='text' />
       </div>
     </section>
     <section class="solid">
-      <h3>下一步</h3>
-      <p>After creating department , it's time to create user(staff) to your
-        department so that they can contribute to their department's KPI </p>
-      <a class="btn btn-primary" id="dashboard-full-size" href="<%= users_path%>">管理用户</a>
+      <h3><%= t 'manage.base.next'%></h3>
+      <p><%= t 'manage.department.desc.next_desc'%> </p>
+      <a class="btn btn-primary" id="dashboard-full-size" href="<%= users_path%>"><%= t 'manage.user.desc.manage'%></a>
     </section>
 
   </aside>
