--- a/app/views/kpi_entries/new.html.erb
+++ b/app/views/kpi_entries/new.html.erb
@@ -1,23 +1,23 @@
 
 <ul class="entry-left-menu" id="entry-left-menu">
-        <li>KPI Entry</li>
+        <li><%= t 'entry.desc.entry'%></li>
         <li class="<%= 'active' if @f==KpiFrequency::Hourly%>" interval="90" show_section="hour">
-            <a  href="/kpi_entries/new?f=<%= KpiFrequency::Hourly%>">Hourly</a>
+            <a  href="/kpi_entries/new?f=<%= KpiFrequency::Hourly%>"><%= t 'manage.kpi.freq_item.hourly'%></a>
         </li>
         <li class="<%= 'active' if @f==KpiFrequency::Daily%>" interval="100" show_section="day">
-            <a  href="/kpi_entries/new?f=<%= KpiFrequency::Daily%>">Daily</a>
+            <a  href="/kpi_entries/new?f=<%= KpiFrequency::Daily%>"><%= t 'manage.kpi.freq_item.daily'%></a>
         </li>
         <li class="<%= 'active' if @f==KpiFrequency::Weekly%>" interval="200" show_section="day">
-            <a  href="/kpi_entries/new?f=<%= KpiFrequency::Weekly%>">Weekly</a>
+            <a  href="/kpi_entries/new?f=<%= KpiFrequency::Weekly%>"><%= t 'manage.kpi.freq_item.weekly'%></a>
         </li>
         <li class="<%= 'active' if @f==KpiFrequency::Monthly%>" interval="300" show_section="month">
-            <a  href="/kpi_entries/new?f=<%= KpiFrequency::Monthly%>">Monthly</a>
+            <a  href="/kpi_entries/new?f=<%= KpiFrequency::Monthly%>"><%= t 'manage.kpi.freq_item.monthly'%></a>
         </li>
         <li class="<%= 'active' if @f==KpiFrequency::Quarterly%>" interval="400" show_section="month">
-            <a  href="/kpi_entries/new?f=<%= KpiFrequency::Quarterly%>">Quarterly</a>
+            <a  href="/kpi_entries/new?f=<%= KpiFrequency::Quarterly%>"><%= t 'manage.kpi.freq_item.quarterly'%></a>
         </li>
         <li class="<%= 'active' if @f==KpiFrequency::Yearly%>" interval="500" show_section="year">
-            <a   href="/kpi_entries/new?f=<%= KpiFrequency::Yearly%>" >Yearly</a>
+            <a   href="/kpi_entries/new?f=<%= KpiFrequency::Yearly%>" ><%= t 'manage.kpi.freq_item.yearly'%></a>
         </li>
 </ul>
 
