--- a/app/views/shares/_locale.html.erb
+++ b/app/views/shares/_locale.html.erb
@@ -6,19 +6,37 @@
   </select>
 </div>
 
+<li class="select-language" id="select-language">
+  <span>中文</span>
+  <i class="icon-caret-down"></i>
+  <ul class="menu-select-language" id="menu-select-language">
+    <li>中文</li>
+    <li>English</li>
+  </ul>
+</li>
+
 <script type="text/javascript">
+  $("body").on("click","#menu-select-language li",function(){
+      var value=$(this).attr("value"),text=$(this).text();
+      if(value!=$("#select-language>span").attr("value")){
+          if(changelocale(value)){
+               $("#select-language>span").text(text).attr("value",value);
+          }
+      }
+  });
   function changelocale(value){
       var data = {
           locale: value
       }
 
       $.ajax({
-          url : '/user_sessions/locale',
+          url  : '/user_sessions/locale',
           data :data,
-          type: 'POST',
+          type :'POST',
+          async:false,
           success: function(data){
               if(data.result){
-                  MessageBox("SSSSSS","top","success");
+                  return true;
               }
           }
       });
